# ClayEngine

./: CMakeLists.txt  README.md
ClayEngineCore/: CMakeLists.txt
ClayEngineEditor/: CMakeLists.txt
ClayEngineEditor/src/: main.cpp
